--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
  
+ 
 <div id="tabs">
   <ul>
     <li><a href="#tabs-1">Family</a></li>
@@ -28,6 +29,7 @@
     <p>That section comes to compare all kinds of motor costs: car, motorcycle, service cost, parts cost, fees, taxes, insurance, gas etc ...</p>
   </div>
   <div id="tabs-3">
+    <img src="HouseLogo.png" alt="house" >
     <p>That section comes to compare housing: rental and buying prices, service costs, bills etc ...</p>
     <p></p>
   </div>
