Updated icon in index

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
   <div id="tabs-3">
     
-    <p><img src="HouseLogo.png" alt="house" > That section comes to compare housing: rental and buying prices, service costs, bills etc ...</p>
+    <p><img src="blue-house-th.png" alt="house" > That section comes to compare housing: rental and buying prices, service costs, bills etc ...</p>
     <p></p>
   </div>
 </div>
