--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <p>That section comes to compare all kinds of motor costs: car, motorcycle, service cost, parts cost, fees, taxes, insurance, gas etc ...</p>
   </div>
   <div id="tabs-3">
-    
-    <p><img src="blue-house-th.png" alt="house" > That section comes to compare housing: rental and buying prices, service costs, bills etc ...</p>
+   <p>That section comes to compare housing: rental and buying prices, service costs, bills etc ...</p> 
+    <p><img src="blue-house-th.png" alt="house">Rental price</p>
     <p></p>
   </div>
 </div>
