--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   });
   $(document).ready(function(){
     $("#rentalPrice").click(function(){
-        $("rentalPriceDetail").show();
+        $("#rentalPriceDetail").show();
     });
     $("#rentalPriceDetail").click(function(){
-        $("rentalPriceDetail").hide();
+        $("#rentalPriceDetail").hide();
     });
   });
   </script>
