--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
   <div id="tabs-3">
    <p>That section comes to compare housing: rental and buying prices, service costs, bills etc ...</p> 
-    <p><div id="rentalPrice"><img src="blue-house-th.png" alt="house">Rental price</div></p>
+    <div><p id="rentalPrice"><img src="blue-house-th.png" alt="house">Rental price</p></div>
     <div id="rentalPriceDetails">TLV 6000 NIS (of 20000 NIS net) VS AMS 1600 EUR (of 4000 EUR net)</div>
     <p></p>
   </div>
