--- a/index.html
+++ b/index.html
@@ -6,16 +6,38 @@
   <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
   <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  <script src="js/data-reader.js"></script>
   <script>
   $(function() {
     $( "#tabs" ).tabs();
-    $("#rentalPriceDetail").hide();
+
+    $("#rentalPriceDetails").hide();
+    
     $("#rentalPrice").click(function(){
-        $("#rentalPriceDetail").show();
+        $("#rentalPriceDetails").toggle();
     });
-    $("#rentalPriceDetail").click(function(){
-        $("#rentalPriceDetail").hide();
+
+    $("#showFamilyData").click(function(){
+        var x = getData("family");
+        $.each( x.nodes, function( index, dataRow ){
+            var string = "";
+           for(var key in dataRow) {
+              string = string + (dataRow[key] + " ");
+            } 
+          $("#familyData").append('<li>'+string+'</li>');
+        });
     });
+    $("#showMotorData").click(function(){
+        var x = getData("motor");
+        $.each( x.nodes, function( index, dataRow ){
+            var string = "";
+           for(var key in dataRow) {
+              string = string + (dataRow[key] + " ");
+            } 
+          $("#motorData").append('<li>'+string+'</li>');
+        });
+    });
+
   });
   </script>
 </head>
@@ -29,15 +51,19 @@
     <li><a href="#tabs-3">Housing</a></li>
   </ul>
   <div id="tabs-1">
-    <p>That section comes to compare "Family" cost of living: kindergarden, classes, kids activities, abonements etc ...</p>
+    <p>Compare "Family" cost of living: kindergarden, classes, kids activities, abonements etc ...</p>
+    <p id="showFamilyData"> More ... </p>
+    <div id="familyData"/>
   </div>
   <div id="tabs-2">
-    <p>That section comes to compare all kinds of motor costs: car, motorcycle, service cost, parts cost, fees, taxes, insurance, gas etc ...</p>
+    <p>Compare all kinds of motor costs: car, motorcycle, service cost, parts cost, fees, taxes, insurance, gas etc ...</p>
+    <p id="showMotorData"> More ... </p>
+    <div id="motorData"/>
   </div>
   <div id="tabs-3">
-   <p>That section comes to compare housing: rental and buying prices, service costs, bills etc ...</p> 
+   <p>Compare housing: rental and buying prices, service costs, bills etc ...</p> 
     <div><p id="rentalPrice"><img src="blue-house-th.png" alt="house">Rental price</p></div>
-    <div id="rentalPriceDetails">TLV 6000 NIS (of 20000 NIS net) VS AMS 1600 EUR (of 4000 EUR net)</div>
+    <p id="rentalPriceDetails">TLV 6000 NIS (of 20000 NIS net) VS AMS 1600 EUR (of 4000 EUR net)</p>
     <p></p>
   </div>
 </div>
