--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="js/data-reader.js"></script>
-  <script>$(main);</script>
+  <script>$(index);</script>
   
 </head>
 <body>
@@ -22,6 +22,7 @@
       <div class="jumbotron">
         <h1>Compare cost of living</h1>
         <p>When relocating to foreighn country it is absolutely required to learn about a living cost overseas</p>
+        <div><input id="salaryA" type="text" name="salaryA"><input id="salaryB" type="text" name="salaryB">
       </div>
 
 <div>
